--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- FIRST PAGE -->
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Profile.</a>
+        <a href="#" class="logo">Profile</a>
         <nav class="navbar">
             <a href="#home" class="active">HOME</a>
             <a href="#about">About</a>
