--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <!-- protfolioi section design -->
  <!-- contant section design -->
  <section class="content" id="contant">
-    <h2 class="heading">Content <span>Me!</span></h2>
+    <h2 class="heading">Contant <span>Me!</span></h2>
     <form action="#">
         <div class="input-box">
             <input type="text" placeholder="Full Name">
